--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
 		</div>
 	</div>
 	
+	<a href="#packages">
 	<div id="cta" class="float-none"> <!-- place transparent bg color on this anchor (make this sit below hero) -->
 		<div class="wrapper">
-			<p><a href="#packages">Learn to Surf!</a></p>
+			<p>Learn to Surf!</p>
 		</div>
 	</div>
+	</a>
 </header>
 	
 <!-- intro -->
@@ -148,7 +150,7 @@
 			<p>With each lesson we cover Ocean safety. This ensures at the end of your experience you have knowledge to know where is a safe area to surf or swim for the future.</p>
 		</div>
 		
-		<div class="col-1-3 float-right"> <img src="img/about-img-1.png" alt=""></div> <!-- place image -->
+		<div class="col-1-4 float-right"> <img src="img/about-img-1.png" alt=""></div> <!-- place image -->
 	</div>
 	
 	<div class="row">
