--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	
 <header> <!-- put bg image on header -->
 	<nav class="row smooth-scroll">
-		<div class="col-1-4 float-left">
+		<div class="col-1-4">
 			<h1><a href="#"><img src="img/EndlessSummer-white.png" alt="home button"></a></h1> <!-- place logo -->
 		</div>
 		<div class="col-2-3 float-right">
@@ -46,7 +46,7 @@
 	</div>
 	
 	<a href="#packages">
-	<div id="cta" class="float-none"> <!-- place transparent bg color on this anchor (make this sit below hero) -->
+	<div id="cta" class="float-none"> <!-- place transparent bg color on this anchor (make this sit below hero) --> <!-- remove-->
 		<div class="wrapper">
 			<p>Learn to Surf!</p>
 		</div>
@@ -66,13 +66,13 @@
 <!-- packages -->
 <div id="packages" class="wrapper">
 	<div class="row">
-		<section class="col-1-2 float-left">
+		<section class="col-1-2">
 			<header>
 				<h2><b>5 Day Deluxe Package &VerticalSeparator; </b> $320</h2>
 			</header>
 			<p><strong>Our guides love teaching the 5 day course!</strong> This course is suited for all ages and teaches techniques to make you a competent surfer! It is aimed at people who really want to get into surfing as each lesson is different and the course is packed with content. We will work on showing you how to sit up and spin your board prior to paddling for a wave.</p>
-			<p><strong>1 x 2.5 hour private lesson</strong> (From Pick up to drop off) Finish on a high note with your last session completely tailored to your individual needs to really get the most out of your surfing.</p>
-			<div class="float-left">
+			<p><b>1 x 2.5 hour private lesson</b> (From Pick up to drop off) Finish on a high note with your last session completely tailored to your individual needs to really get the most out of your surfing.</p>
+			<div class="float-left"> <!-- remove div -->
 				<p class><a href="#">Buy now!</a></p>
 			</div>
 		</section>
@@ -80,7 +80,7 @@
 	</div>
 	
 	<div class="row">
-		<section class="col-1-2 float-left">
+		<section class="col-1-2">
 			<div class="circle"></div> <!-- place image and circle here -->
 			<header>
 				<h2><b>1/2 Day Learn to Surf Adventure</b><br> $65</h2>
@@ -100,7 +100,7 @@
 	</div>
 	
 	<div class="row">
-		<section class="col-1-2 float-left">
+		<section class="col-1-2">
 			<div class="circle"></div> <!-- place image and circle here -->
 			<header>
 				<h2><b>3 Day Ultimate Wave Rider</b> $155</h2>
@@ -123,7 +123,7 @@
 
 <div id="article"> <!-- place bg image here for article -->
 	<div class=" wrapper">
-		<div class="col-1-2 float-none ">
+		<div class="col-1-2 float-none "> <!-- remove div -->
 			<p><a href="http://www.theinertia.com/surf/8-awesome-ways-to-prepare-for-a-surf-trip/" target="_blank">Get ready to surf, read this article!</a></p>
 		</div>
 	</div>
@@ -136,7 +136,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-1-3 float-left">
+		<div class="col-1-3">
 			<p><b>All equiptment included</b></p>
 			<ul>
 				<li>Free shuttle</li>
@@ -146,15 +146,15 @@
 			</ul>
 		</div>
 		
-		<div class="col-1-3 float-left">
+		<div class="col-1-3">
 			<p>With each lesson we cover Ocean safety. This ensures at the end of your experience you have knowledge to know where is a safe area to surf or swim for the future.</p>
 		</div>
 		
-		<div class="col-1-4 float-right"> <img src="img/about-img-1.png" alt=""></div> <!-- place image -->
+		<div class="col-1-4 float-right"> <img src="img/about-1.png" alt=""></div> <!-- place image -->
 	</div>
 	
 	<div class="row">
-		<div class="col-1-3"><img src="img/about-img-2.png" alt=""></div> <!-- place image -->
+		<div class="col-1-3"><img src="img/about-2.png" alt=""></div> <!-- place image -->
 		
 		<div class="col-2-3">
 			<ul>
@@ -174,13 +174,13 @@
 </div>
 
 <!-- map -->
-<div>
+<div><!-- remove div -->
 	<div id="map"></div>
 </div>
 
-<div id="contact" class="wrapper row">
+<div id="contact" class="wrapper row"> <!-- remove div -->
 	<form class="row">
-		<div class="col-1-2 float-left">
+		<div class="col-1-2">
 			<label for="first-name">First Name</label>
 			<input id="first-name" type="text" name="first-name">
 
@@ -206,18 +206,18 @@
 	
 <footer> <!-- bg color -->
 	<div class="wrapper row">
-		<div class="col-1-3 float-left">
+		<div class="col-1-3">
 			<p><a href="tel:+6478257873">+64 7-825 7873</a></p>
 		</div>
 		
-		<div class="col-1-3 float-left">
+		<div class="col-1-3">
 			<p><a href="#">5B Whaanga Rd, <br> Raglan 3297 <br> New Zealand</a></p>
 		</div>
 		
 		<div class="col-1-3">
 			<ul class="float-right">
-				<li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i><span>facebook</span></a></li>
+				<li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i><span>twitter</span></a></li>
 			</ul>
 		</div>
 	</div>
@@ -226,7 +226,7 @@
 	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script type="text/javascript" src="js/functions.js"> </script>
+<script type="text/javascript" src="js/functions.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js"></script> <!-- place at end of html -->
     <script>
