semi-final push
working progress push

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 <link rel="stylesheet" type="text/css" href="css/main.css">
 	
-<title> Assignment 5 </title>
+<title> Client site </title>
 </head>
 
 <body>
@@ -72,9 +72,9 @@
 			</header>
 			<p><strong>Our guides love teaching the 5 day course!</strong> This course is suited for all ages and teaches techniques to make you a competent surfer! It is aimed at people who really want to get into surfing as each lesson is different and the course is packed with content. We will work on showing you how to sit up and spin your board prior to paddling for a wave.</p>
 			<p><b>1 x 2.5 hour private lesson</b> (From Pick up to drop off) Finish on a high note with your last session completely tailored to your individual needs to really get the most out of your surfing.</p>
-			<div class="float-left"> <!-- remove div -->
-				<p class><a href="#">Buy now!</a></p>
-			</div>
+			
+			<p><a class="full-width" href="#">Buy now!</a></p>
+			
 		</section>
 		<div class="col-1-2 float-right"><img src="img/five-day-pk.jpg" alt=""></div> <!-- place image -->
 	</div>
@@ -86,7 +86,7 @@
 				<h2><b>1/2 Day Learn to Surf Adventure</b><br> $65</h2>
 			</header>
 			<p><b>1 x 4 hour Surf Safari</b> We will teach you all the necessary steps to get you up and surfing and riding waves on your first lesson. Our Instructors use hands on teaching techniques to get you standing very quickly!</p>
-			<p><a href="#">Buy now!</a></p>
+			<p><a class="full-width" href="#">Buy now!</a></p>
 		</section>
 	
 		<section class="col-1-2 float-right">
@@ -95,7 +95,7 @@
 				<h2><b>2 Day Progressive Surf Lesson</b><br> $115</h2>
 			</header>
 			<p><b>2 x 4 hour surf safari</b> Learn to improve stance, Pop up technique and introduce paddling. The aim of lesson two is to improve consistency and length of ride so we focus on weight distribution how to slow and speed the surfboard up.</p>
-			<p><a href="#">Buy now!</a></p>
+			<p><a class="full-width" href="#">Buy now!</a></p>
 		</section>
 	</div>
 	
@@ -106,7 +106,7 @@
 				<h2><b>3 Day Ultimate Wave Rider</b> $155</h2>
 			</header>
 			<p><b>3 x 4 hour surf safari</b> Surf at different locations! We aim to improve Paddling technique and timing, Pop up technique, stance and work on slowing and speeding up your surfboard, and introduce a Frontside turn and a Backside turn.</p>
-			<p><a href="#">Buy now!</a></p>
+			<p><a class="full-width" href="#">Buy now!</a></p>
 		</section>
 	
 		<section class="col-1-2 float-right">
@@ -115,17 +115,15 @@
 				<h2><b>4 Day Epic Surf Experience</b> $185</h2>
 			</header>
 			<p><b>4 x 4 hour surf safari</b> Introducing the S-turns (This is doing multiple turns on one wave) and surfing with Flow! We aim to start catching unbroken waves if the conditions on the day allow.</p>
-			<p><a href="#">Buy now!</a></p>
+			<p><a class="full-width" href="#">Buy now!</a></p>
 		</section>
 	</div>
 </div>
 
 
 <div id="article"> <!-- place bg image here for article -->
-	<div class=" wrapper">
-		<div class="col-1-2 float-none "> <!-- remove div -->
+	<div class="wrapper float-none">
 			<p><a href="http://www.theinertia.com/surf/8-awesome-ways-to-prepare-for-a-surf-trip/" target="_blank">Get ready to surf, read this article!</a></p>
-		</div>
 	</div>
 </div>
 
@@ -169,14 +167,12 @@
 		<label for="email-subscribe">Subscribe to Our Emails</label>
 		<input id="email-subscribe" type="email" name="email-subscribe">
 
-		<p><a href="#">Subscribe</a></p>
+		<p><a class="full-width" href="#">Subscribe</a></p>
 	</form>
 </div>
 
 <!-- map -->
-<div><!-- remove div -->
 	<div id="map"></div>
-</div>
 
 <div id="contact" class="wrapper row"> <!-- remove div -->
 	<form class="row">
