--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			<label for="message">Message</label>
 			<input id="message" type="text" name="message">
 
-			<p><a href="#">Submit</a></p>
+			<p><a class="full-width" href="#">Submit</a></p>
 		</div>
 	</form>
 </div>
